# zkboo

./: Cargo.toml  README.md
src/: lib.rs
src/backend/: backend.rs  boolean_word_ref.rs  frontend.rs  mod.rs  word_ref.rs
src/circuit/: circuit.rs  macros.rs  mod.rs
src/crypto/: hasher.rs  mod.rs  prg.rs
src/executor/: backend.rs  functions.rs  mod.rs  word_pool.rs
src/memory/: allocset.rs  memory_manager.rs  mod.rs
src/prover/: functions.rs  mod.rs
src/prover/challenge/: builder.rs  challenge.rs  functions.rs  mod.rs
src/prover/proof/: builder.rs  collectors.rs  functions.rs  mod.rs  response.rs
src/prover/views/: backend.rs  collectors.rs  functions.rs  mod.rs  view.rs  word_pool.rs
src/utils/: mod.rs
src/verifier/: functions.rs  mod.rs  verifier.rs
src/verifier/replay/: backend.rs  mod.rs  word_pool.rs
src/word/: by_word_type.rs  collectors.rs  mod.rs  word.rs  word_idx.rs  words.rs
tests/: test_binops.rs  test_comparisons.rs  test_misc.rs  test_select.rs  test_shiftlike_unops.rs  test_unops.rs  test_wide_binops.rs
tests/common/: mod.rs  proofs.rs  rand_words.rs  test_all_words.rs  test_func.rs
