[package]
name = "zkboo"
version = "0.1.0"
edition = "2024"
description = "An implementation of the ZKBoo protocol."
license = "LGPL-3.0-or-later"
documentation = "https://docs.rs/zkboo"
readme = "README.md"
keywords = ["zk", "zero-knowledge", "zkboo"]
categories = ["cryptography", "no-std"]

[package.metadata.docs.rs]
features = ["u16", "u32", "u64", "u128", "u256", "parallel"]

[dependencies]
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
zeroize = { version = "1.8.2", default-features = false, features = [
    "zeroize_derive",
    "alloc",
] }
rayon = { version = "1.11.0", optional = true }

[dev-dependencies]
rand = "0.10.0"
paste = "1.0.15"
blake3 = "1.8.3"
itertools = "0.14.0"

[features]
default = []
u16 = [] # enables support for 16-bit words
u32 = [] # enables support for 32-bit words
u64 = [] # enables support for 64-bit words
u128 = [] # enables support for 128-bit words
u256 = [] # enables support for 256-bit words
parallel = [
    "rayon",
] # enables parallel proving/verifying using the `rayon` crate
